# Storyteller

./: .gitignore  .gitmodules  CLAUDE.md  FullFeatured app Instructions.md  LLM_SPEED_OPTIONS.md  MoreFeatures.md  PROFILING.md  QUICK_REFERENCE.md  QWEN_MODEL_INTEGRATION.md  README.md  SpaceStoryAnalysis.md  augTaskList.json  build-fix.ps1  build.gradle.kts  hibernate-after-2hours.ps1  my_prompt.md  settings.gradle.kts  tasklist.json  usertask.md
.augment/: session.json
.claude/: settings.local.json
.cursor/rules/: CodeQualityStandards.mdc  build-and-install-after-change.mdc  retry-on-failure.mdc  update-tests-on-api-changes.mdc
app/: build.gradle.kts  proguard-rules.pro
app/libs/aar_extract/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/demo/: SpaceStoryAnalysis.json
app/src/main/assets/models/: llm_model_config.json
app/src/main/assets/tts/: tts_model_config.json
app/src/main/cpp/: CMakeLists.txt  host-toolchain-ninja.cmake  host-toolchain-vulkan.cmake.in  llama_jni.cpp  stable_audio_jni.cpp
app/src/main/res/anim/: item_animation.xml  scale_in.xml  slide_in_bottom.xml
app/src/main/res/drawable/: badge_background.xml  badge_background_m3.xml  badge_glass_background.xml  bg_circle_tertiary.xml  bg_dark_card.xml  bg_dialog_badge.xml  bg_emotion_badge.xml  bg_gradient_orange_pink.xml  bg_gradient_purple_blue.xml  circle_grey.xml  circle_indicator.xml  dialog_background.xml  gradient_bottom_overlay.xml  gradient_glass_background.xml  ic_arrow_forward.xml  ic_book.xml  ic_check_circle.xml  ic_error.xml  ic_expand_more.xml  ic_favorite.xml  ic_favorite_border.xml  ic_folder.xml  ic_launcher.xml  ic_music_note.xml  ic_play_circle.xml  ic_refresh.xml  ic_stop_circle.xml  ic_tune.xml  neumorphic_inset.xml  neumorphic_raised.xml  selector_tab_indicator.xml  settings_drag_handle.xml
app/src/main/res/font/: atkinson_hyperlegible.xml  lexend.xml  lora.xml  merriweather.xml  merriweather_bold.xml
app/src/main/res/layout/: activity_insights_test.xml  activity_library_test.xml  activity_llm_benchmark.xml  activity_main.xml  activity_pdf_viewer_test.xml  activity_splash.xml  activity_stable_audio_test.xml  activity_test.xml  bottom_sheet_player.xml  bottom_sheet_settings.xml  dialog_chapter_manager.xml  dialog_character_detail.xml  dialog_error.xml  dialog_model_params.xml  dialog_narrator_speaker_selection.xml  dialog_shimmer_loading.xml  dialog_voice_selector.xml  fragment_book_detail.xml  fragment_bookmarks.xml  (+58 more)
docs/: ACTION_ITEMS.md  AI_AGENT_BENCHMARK_GUIDE.md  CODEBASE_ISSUES.md  COMPREHENSIVE_ISSUES_SUMMARY.md  Features.md  IMPLEMENTATION_GUIDE.md  LLMPrompts.md  LLM_SPEED_OPTIONS.md  MODEL_REFERENCES_UPDATED.md  NOVELREADERWEB_FEATURE_IMPLEMENTATION_PLAN.md  ONNX_MIGRATION_TASKS.md  PERFORMANCE_ACCURACY_PLAN.md  PROFILING.md  Provide_a_short_summary_of_this_project_2026-01-30T21-13-01.md  QUICK_REFERENCE.md  QWEN_MODEL_INTEGRATION.md  README_NDK_VULKAN.md  ReviewReport.md  TECHNICAL_SPECIFICATIONS.md  TTS_Benchmarks.md  libs_README.md  mobileprompts.md  my_prompt.md  requirements.md  usertask.md
docs/AIPlanDocs/: AI_AGENT_BENCHMARK_GUIDE.md  ANALYSIS_AUDIT_SUMMARY.md  ANALYSIS_FILES_COMPLETE_LIST.md  ANALYSIS_WORKFLOW_AUDIT.md  ANALYSIS_WORKFLOW_DETAILS.md  CHAPTER_ANALYSIS_ARCHITECTURE_DETAILS.md  CHAPTER_ANALYSIS_IMPLEMENTATION_PATTERNS.md  CHAPTER_ANALYSIS_PIPELINE_EXPLORATION.md  CLEANUP_ACTION_PLAN.md  COMPLETE_PROMPTS_TEXT.md  DETAILED_ANALYSIS_FINDINGS.md  DETAILED_FILE_BREAKDOWN.md  FEATURE_COMPLIANCE_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN_SUMMARY.md  PASS1_PASS2_PROMPTS_AND_CHECKPOINT.md  PROMPTS_AND_WORKFLOW_ANALYSIS.md  PROMPTS_DOCUMENTATION_INDEX.md  PROMPT_EXAMPLES_AND_USAGE.md  QUICK_FIX_CHECKLIST.md  QUICK_REFERENCE.md  QWEN_MODEL_INTEGRATION.md  TASKLIST_VERIFICATION.md  TECHNICAL_SPECIFICATIONS.md  TTS_API_REFERENCE.md  TTS_ARCHITECTURE_DETAILS.md  TTS_EXPLORATION_INDEX.md  TTS_FILE_STRUCTURE.md  TTS_IMPLEMENTATION_EXPLORATION.md  TTS_KEY_FINDINGS.md  TTS_VISUAL_SUMMARY.md  WORKFLOW_ARCHITECTURE_DIAGRAM.md  plan-tts-modularization.md
docs/tasklists/: ArchitectureTaskList.json  AudioPipelineTaskList.json  ChapterManagementTaskList.json  ExternalDataTaskList.json  InsightsTaskList.json  README.md  ReadingModesTaskList.json  SettingsTaskList.json  StoryGeneratorTaskList.json  SummaryTaskList.json  TestingTaskList.json  ThemeTaskList.json  UITaskList.json  VisualizationTaskList.json  VoiceManagementTaskList.json
myPrompts/: Batched Analysis.md  LLMPrompts.md  newPrompts.md
scripts/: BENCHMARK_GUIDE.md  SPEED_AND_CONFIG.md  benchmark_gemma3n_litertlm.py  benchmark_log.txt  benchmark_models.ps1  benchmark_phi_mini_litertlm.py  benchmark_qwen_litertlm.py  benchmark_report.md  capture_logs.bat  capture_performance.bat  five_pass_benchmark.py  five_pass_benchmark_results.txt  full_book_benchmark.py  full_book_benchmark_results.txt  full_prompt.txt  llm_test_output.txt  medium_prompt.txt  pass1_prompt.txt  pass1_test.txt  pass2_optimization_results.txt  run_3pass_benchmark_all_models.ps1  run_pass1_test.py  short_prompt.txt  temp_prompt.txt  test_llm_local.py  test_pass1_prompt.py  test_pass2_optimization.py  test_short_prompt.py  test_three_pass_workflow.py  three_pass_benchmark_results.txt  three_pass_with_context.py  tiny_prompt.txt
scripts/benchmark/: TROUBLESHOOTING.md  __init__.py  models.py  prompts.py  raw_llm_output.txt  raw_llm_output_gemma.txt  raw_llm_output_qwen25_3b.txt  run_benchmark.py  utils.py  workflows.py
scripts/benchmarkResults/: HP_3pass_gemma3_1b.txt  HP_3pass_gemma3_1b_v2.txt  HP_3pass_gemma3_4b.txt  HP_3pass_gemma3_4b_interleaved.txt  HP_3pass_qwen3_v2.txt  HP_3pass_qwen3_v3.txt  Phi vs Qwen results.md  gemma3n_lite_HP3Chapters.txt  gemma3n_litertlm_benchmark_output.txt  phi_mini_litertlm_benchmark_output.md  qwen_litertlm_benchmark_output.md
scripts/prompt_tester/: __init__.py  prompt_tester.py  read_pdf.py  requirements.txt
scripts/stable-audio-conversion/: README.md  export_conditioners.py  export_dit_autoencoder.py  install_requirements.ps1  utils_load_model.py
(+344 files in other folders)
